benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_DivMod_Compare_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_DivMod_Compare.rs
Time: 2025-09-15 20:21:48

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:32:14
   |
32 |         if v@[i] == '1' {
   |              ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:39:23
   |
39 |         result.push(v@[j]);
   |                       ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:54:15
   |
54 |         if v1@[i] > v2@[i] {
   |               ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:54:24
   |
54 |         if v1@[i] > v2@[i] {
   |                        ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:57:15
   |
57 |         if v1@[i] < v2@[i] {
   |               ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:57:24
   |
57 |         if v1@[i] < v2@[i] {
   |                        ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:86:21
   |
86 |         let d1 = v1@[j] as i32 - '0' as i32;
   |                     ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:87:28
   |
87 |         let d2 = v2_padded@[j] as i32 - '0' as i32;
   |                            ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:101:26
    |
101 |         result.push(temp@[temp_len - 1 - i]);
    |                          ^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0608`.

--------------------------------------------------------------------------------

Additional Output:
error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:32:14
   |
32 |         if v@[i] == '1' {
   |              ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:39:23
   |
39 |         result.push(v@[j]);
   |                       ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:54:15
   |
54 |         if v1@[i] > v2@[i] {
   |               ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:54:24
   |
54 |         if v1@[i] > v2@[i] {
   |                        ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:57:15
   |
57 |         if v1@[i] < v2@[i] {
   |               ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:57:24
   |
57 |         if v1@[i] < v2@[i] {
   |                        ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:86:21
   |
86 |         let d1 = v1@[j] as i32 - '0' as i32;
   |                     ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:87:28
   |
87 |         let d2 = v2_padded@[j] as i32 - '0' as i32;
   |                            ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_DivMod_Compare_impl.rs:101:26
    |
101 |         result.push(temp@[temp_len - 1 - i]);
    |                          ^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0608`.
